force-app/main/default/objects/Drawdown_Transaction__c/Drawdown_Transaction__c.object-meta.xml
<CustomObject>
    <label>Drawdown Transaction</label>
    <nameField>
        <displayFormat>DT-{00000000}</displayFormat>
        <label>Drawdown Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drawdown Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>