force-app/main/default/objects/Drawdown_Transaction__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Sensitive Personal Information;Source - Salesforce</complianceGroup>
    <description>Account number of drawdown</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>