force-app/main/default/objects/Drawdown_Transaction__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Type of account for drawdown</description>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DRAWDOWN_TRANSACTION_ACCOUNT_TYPE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>DRAWDOWN_TRANSACTION_ACCOUNT_TYPE_PROCESSING</fullName>
                <label>Processing</label>
            </value>
            <value>
                <fullName>DRAWDOWN_TRANSACTION_ACCOUNT_TYPE_CREDIT</fullName>
                <label>Credit</label>
            </value>
            <value>
                <fullName>DRAWDOWN_TRANSACTION_ACCOUNT_TYPE_DEBIT</fullName>
                <label>Debit</label>
            </value>
            <value>
                <fullName>DRAWDOWN_TRANSACTION_ACCOUNT_TYPE_INSURANCE</fullName>
                <label>Insurance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>