force-app/main/default/objects/Drawdown_Transaction__c/fields/BSB_Number__c.field-meta.xml
<CustomField>
    <fullName>BSB_Number__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>BSB Number for the drawdown</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>BSB Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>