force-app/main/default/objects/Drawdown_Transaction__c/fields/Drawdown__c.field-meta.xml
<CustomField>
    <fullName>Drawdown__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Link to drawdown that the record relates to</description>
    <label>Drawdown</label>
    <referenceTo>Drawdown__c</referenceTo>
    <relationshipLabel>Drawdown Transactions</relationshipLabel>
    <relationshipName>Drawdown_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>