force-app/main/default/objects/Drawdown_Transaction__c/fields/Settlement_ID__c.field-meta.xml
<CustomField>
    <fullName>Settlement_ID__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy - Non Personal Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to settlement</description>
    <label>Settlement ID</label>
    <referenceTo>Settlement__c</referenceTo>
    <relationshipLabel>Drawdown Transactions</relationshipLabel>
    <relationshipName>Drawdown_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>