force-app/main/default/objects/Drawdown_Transaction__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Unique ID for the drawdown transaction</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Transaction ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>