force-app/main/default/objects/Drawdown_Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The transaction type of the drawdown</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unspecified</fullName>
            </value>
            <value>
                <fullName>DRAWDOWN_TRANSACTION_TYPE_DRAW</fullName>
                <label>Draw</label>
            </value>
            <value>
                <fullName>DRAWDOWN_TRANSACTION_TYPE_CSTCNT</fullName>
                <label>Customer Contribution</label>
            </value>
            <value>
                <fullName>DRAWDOWN_TRANSACTION_TYPE_DRAWSEC</fullName>
                <label>Security Fees</label>
            </value>
            <value>
                <fullName>DRAWDOWN_TRANSACTION_TYPE_DRAWPOF</fullName>
                <label>Payoff</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>